# tellus

./: .envrc  .gitignore  APPLICATION_SERVICES.md  ARCHIVE_IMPLEMENTATION_PLAN.md  ARCHIVE_USAGE_GUIDE.md  BUGFIX_README.md  CLAUDE.local.md  CLAUDE.md  DEMO_WORKFLOW.ipynb  DEMO_WORKFLOW.md  Dockerfile  HACKING.md  README.md  REFACTORING_MIGRATION_GUIDE.md  SECURITY_TEST_SUMMARY.md  TELLUS_DOCUMENTATION_PROJECT.md  archives.json  demo_archive_system.py  devcontainer.json  docker-compose.yml  pyproject.toml  quick_test.py  test_web_ui.py  web-frontend-issue.md
.github/workflows/: ci.yml  docs-execute.yml  publish.yml  test.yml
.tellus/: .tellusignore
.tellus/data/: tracked_files.json
docs/: _config.yml  index.md  quickstart.md
docs/api/: index.md
docs/api/application/: services.md
docs/api/infrastructure/: repositories.md
docs/examples/: index.md
docs/tutorials/: CLI_DEMO.ipynb  REST_API_DEMO.ipynb
examples/getting-started/: 01_quickstart_personal_archive.ipynb  02_cmip6_ensemble_analysis.ipynb  cli_cookbook.md
readmes/: CRITICAL_PROBLEMS.md  DESIGN_IMPROVEMENTS.md  HACKING.md  TESTING.md
sandbox/: manual_tests.py
src/tellus/: __init__.py  __main__.py  hsm.py  location.py  progress.py  scoutfs.py  simulation.py  simulation_api.py
src/tellus/application/: __init__.py  container.py  dtos.py  exceptions.py  service_factory.py
src/tellus/application/services/: __init__.py  archive_service.py  bulk_operation_queue.py  concurrent_progress_tracker.py  file_tracking_service.py  file_transfer_service.py  location_service.py  operation_handler.py  operation_queue_service.py  path_resolution_service.py  progress_callback_system.py  progress_tracking_service.py  simulation_service.py  simulation_workflow_service.py  template_service.py  unified_file_service.py  workflow_execution_service.py  workflow_service.py
src/tellus/archive/: __init__.py  cli.py
src/tellus/cli/: __init__.py  database.py
src/tellus/core/: cli.py  config.py  feature_flags.py  fs_manager.py  fs_manager_fixed.py  legacy_bridge.py  main.py  service_container.py
src/tellus/domain/entities/: __init__.py  archive.py  file_tracking.py  file_type_config.py  location.py  progress_tracking.py  simulation.py  simulation_file.py  simulation_template.py  workflow.py
src/tellus/domain/repositories/: archive_repository.py  file_tracking_repository.py  progress_tracking_repository.py
src/tellus/domain/services/: __init__.py  archive_creation.py  archive_extraction.py  file_classifier.py  file_scanner.py  fragment_assembly.py  sidecar_metadata.py  workflow_templates.py
src/tellus/infrastructure/adapters/: fsspec_adapter.py  scoutfs_filesystem.py  workflow_engines.py
src/tellus/infrastructure/database/: config.py  models.py
src/tellus/infrastructure/repositories/: __init__.py  json_archive_repository.py  json_file_tracking_repository.py  json_location_repository.py  json_progress_tracking_repository.py  json_simulation_repository.py  json_workflow_repository.py  postgres_location_repository.py  postgres_simulation_repository.py  template_repository.py
src/tellus/infrastructure/services/: filesystem_service.py
src/tellus/interfaces/cli/: archive.py  completion.py  config.py  file_tracking.py  file_types.py  location.py  main.py  progress.py  progress_display.py  rest_client.py  simulation.py  simulation_extended.py  transfer.py  workflow.py  workflow_wizards.py
src/tellus/interfaces/tui/: README.md  app.py  app.tcss  cli.py  main.py  managers.py  screens.py  widgets.py
src/tellus/interfaces/web/: dependencies.py  main.py
src/tellus/interfaces/web_ui/: README.md  __init__.py  app.py  requirements.txt  run.py  state.py
src/tellus/location/: __init__.py  cli.py  location.py  sandboxed_filesystem.py
src/tellus/simulation/: __init__.py  api.py  cli.py  cli_archive.py  context.py  simulation.py
src/tellus/testing/fixtures/: __init__.py
src/tellus/tui/: README.md  __init__.py  app.py  cli.py  earth_science.py  main.py  managers.py  operation_queue.py  requirements.txt  screens.py  widgets.py
src/tellus/workflow/: __init__.py  cli.py  wizards.py
src/tellus/workflow_templates/: __init__.py  earth_science_templates.py
src/tellus_chat/: pyproject.toml
src/tellus_chat/src/tellus_chat/: __init__.py  cli.py  config.py
tests/: conftest.py  fixtures.py  security_utils.py  test_archive_system.py  test_cli.py  test_cli_old.py  test_enduser_example.py  test_filesystem_performance_comparison.py  test_fragment_assembly.py  test_hpc_climate_performance.py  test_integration_workflows.py  test_location.py  test_memory_cpu_profiling.py  test_optimization_recommendations.py  test_parallel_stress_performance.py  test_path_sandboxing.py  test_performance.py  test_performance_regression_framework.py  test_property_based.py  test_sandboxed_filesystem_performance.py  test_sandboxed_filesystem_stress.py  test_security_integration.py  test_security_path_sandboxing.py  test_security_property_based.py  test_simulation.py
tests/.claude/: settings.local.json
tests/application/: test_dtos.py
tests/architecture/: __init__.py  base_tests.py  cache.py  configuration.py  dependency_injection.py  example_refactored_test.py  factories.py  file_transfer_base_tests.py  file_transfer_factories.py  filesystem.py  interfaces.py  network.py  test_organization.py  utilities.py
tests/fixtures/: earth_science.py  simulation.py
tests/integration/: test_concurrency_races.py  test_end_to_end_workflows.py  test_end_to_end_workflows_simple.py  test_error_recovery.py  test_legacy_bridge_integration.py  test_location_configuration_scenarios.py  test_location_filesystem_adapter_integration.py  test_location_persistence_integration.py  test_location_sandboxing_integration_suite.py  test_system_reliability.py
tests/interfaces/web/: conftest.py  test_health.py  test_integration.py  test_locations.py  test_simulations.py
tests/old-tests/: test_location.py
tests/unit/application/services/: test_archive_service.py  test_file_transfer_service.py  test_file_transfer_simple.py  (+4 more)
tests/utils/: earth_science_helpers.py
(+53 files in other folders)
