[project]
authors = [{name = "Paul Gierz", email = "pgierz@awi.de"}]
dependencies = []
name = "tellus"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
tellus = { path = ".", editable = true }
animavox = { path = "./vendor/animavox", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
test = ["test"]
test-py311 = ["py311", "test"]
test-py312 = ["py312", "test"]

[tool.pixi.dependencies]
python = "*"
fsspec = ">=2025.7.0,<2026"
pytest-trio = ">=0.8.0,<0.9"
