[project]
authors = [{name = "Paul Gierz", email = "pgierz@awi.de"}]
name = "tellus"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/tellus"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
tellus = { path = ".", editable = true }
animavox = { path = "./vendor/animavox", editable = true }
# snakemake-storage-plugin-fsspec = { git = "git+https://github.com/pgierz/snakemake-storage-plugin-fsspec.git" }

[tool.pixi.tasks]
sandbox = "python3 sandbox/manual_tests.py"
# sandbox = { cmd = "python3 my_tellus_script.py", cwd = "sandbox" , description = "Run a dummy script using tellus"}

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
test = ["test"]
test-py311 = ["py311", "test"]
test-py312 = ["py312", "test"]

[tool.pixi.dependencies]
python = "*"
fsspec = ">=2025.7.0,<2026"
inquirerpy = ">=0.3.4,<0.4"
loguru = ">=0.7.3,<0.8"
paramiko = ">=3.5.1,<4"
pytest-trio = ">=0.8.0,<0.9"
questionary = ">=2.1.0,<3"
requests = ">=2.32.4,<3"
rich-click = ">=1.8.9,<2"
snakemake = ">=9.8.0,<10"
fastapi = ">=0.116.1,<0.117"
uvicorn = ">=0.35.0,<0.36"
